--- a/rebar.config
+++ b/rebar.config
@@ -72,8 +72,9 @@
 %% type, location and revision).
 %% Rebar3 currently supports git and hg
 {deps, [
-    %% {rebar, {git, "https://github.com/rebar/rebar.git", {branch, "master"}}}
-    {eda, {git, "https://github.com/ruanpienaar/eda.git", {branch, "master"}}}
+    {eda,           {git, "https://github.com/ruanpienaar/eda.git", {branch, "master"}}},
+    {queue_workers, {git, "https://github.com/ruanpienaar/queue_workers", {branch, "master"}}},
+    {tempo,         {git, "https://github.com/ruanpienaar/tempo", {branch, "master"}}}
 ]}.
 
 
