--- a/rebar.config
+++ b/rebar.config
@@ -72,9 +72,9 @@
 %% type, location and revision).
 %% Rebar3 currently supports git and hg
 {deps, [
-    {eda,           {git, "https://github.com/ruanpienaar/eda.git", {branch, "master"}}},
+    {eda,           {git, "https://github.com/ruanpienaar/eda.git",       {branch, "master"}}},
     {queue_workers, {git, "https://github.com/ruanpienaar/queue_workers", {branch, "master"}}},
-    {tempo,         {git, "https://github.com/ruanpienaar/tempo", {branch, "master"}}}
+    {tempo,         {git, "https://github.com/ruanpienaar/tempo",         {branch, "master"}}}
 ]}.
 
 
@@ -185,10 +185,15 @@
 %% == Releases ==
 
 {relx, [{release, { interlay, "0.0.1"},
-         [
+         [gproc,
+          queue_workers,
+          tempo,
+          leporidae,
+          gun,
+          cowlib,
           ranch,
-          eda, 
-          interlay 
+          eda,
+          interlay
          ]},
         {dev_mode, true},
         {include_erts, false},
@@ -204,8 +209,8 @@
 %% specified in a `relx' tuple, if any.
 {shell, [{apps, [
         ranch,
-        eda, 
-	interlay 
+        eda,
+	interlay
 ]}]}.
 
 %% == xref ==
