--- a/config/sys.config
+++ b/config/sys.config
@@ -19,6 +19,80 @@
     ]
  },
 
+ {leporidae,
+    [   {reconnect_attempt_interval, 100},
+        {producers,[
+            {amqp, [
+                {name, queue_workers_rabbitmq_producer},
+                {routing_key, <<"xxx">>},
+                {basic, [
+                    {delivery_mode, 2} % non­persistent (1) or persistent (2)
+                ]},
+                % TODO: change to use global_connection
+                {connection, [
+                    {type, network},
+                    {username, <<"root">>},
+                    {passwd, <<"root">>},
+                    {vhost, <<"/">>},
+                    {host, "localhost"},
+                    {port, 5672}
+                ]},
+                {exchange,[
+                    {exchange, <<"queue_workers">>},
+                    {type, <<"direct">>},
+                    {durable, true}
+                ]},
+                {queue, [
+                    {ticket, 0},
+                    {queue, <<"queue_workers_jobs">>},
+                    {passive, false},
+                    {durable, true},
+                    {exclusive, false},
+                    {auto_delete, false},
+                    {nowait, false},
+                    {arguments, []}
+                ]}
+            ]}
+        ]},
+        {consumers, [
+            {amqp, [
+                {name, queue_workers_rabbitmq_consumer},
+                {consume_type, consume},
+                {consume_worker_mod, queue_workers_rabbitmq_worker},
+                {routing_key, <<"xxx">>},
+                {consume, [
+                    {no_ack, false},
+                    {exclusive, false},
+                    {nowait, false},
+                    {arguments, []}
+                ]},
+                {connection, [
+                    {type, network},
+                    {username, <<"root">>},
+                    {passwd, <<"root">>},
+                    {vhost, <<"/">>},
+                    {host, "localhost"},
+                    {port, 5672}
+                ]},
+                {exchange,[
+                    {exchange, <<"queue_workers">>},
+                    {type, <<"direct">>},
+                    {durable, true}
+                ]},
+                {queue, [
+                    {ticket, 0},
+                    {queue, <<"queue_workers_jobs">>},
+                    {passive, false},
+                    {durable, true},
+                    {exclusive, false},
+                    {auto_delete, false},
+                    {nowait, false},
+                    {arguments, []}
+                ]}
+            ]}
+        ]}
+ ]},
+
  {sasl, [
          {sasl_error_logger, {file, "log/sasl-error.log"}},
          {errlog_type, error},
