--- a/rebar.config
+++ b/rebar.config
@@ -72,9 +72,9 @@
 %% type, location and revision).
 %% Rebar3 currently supports git and hg
 {deps, [
-    {eda,           {git, "https://github.com/ruanpienaar/eda.git",       {branch, "master"}}},
-    {queue_workers, {git, "https://github.com/ruanpienaar/queue_workers", {branch, "master"}}},
-    {tempo,         {git, "https://github.com/ruanpienaar/tempo",         {branch, "master"}}}
+    {interlay_io,   {git, "https://github.com/ruanpienaar/interlay_io", {branch, "master"}}},
+    % {interlay_work, {git, "https://github.com/ruanpienaar/interlay_work", {branch, "master"}}},
+    {edc,           {git, "https://github.com/ruanpienaar/edc", {branch, "master"}}}
 ]}.
 
 
@@ -108,7 +108,11 @@
 %% directories where OTP applications for the project can be located
 {project_app_dirs, ["apps/*", "lib/*", "."]}.
 %% Directories where source files for an OTP application can be found
-{src_dirs, ["src"]}.
+{src_dirs, [
+    "apps/interlay_work/src",
+    "apps/interlay_io/src",
+    "apps/interlay/src", "src"
+]}.
 %% Paths to miscellaneous Erlang files to compile for an app
 %% without including them in its modules list
 %%{extra_src_dirs, []}.
@@ -185,14 +189,18 @@
 %% == Releases ==
 
 {relx, [{release, { interlay, "0.0.1"},
-         [gproc,
-          queue_workers,
-          tempo,
-          leporidae,
-          gun,
-          cowlib,
-          ranch,
-          eda,
+         [
+          % gproc,
+          % queue_workers,
+          % tempo,
+          % leporidae,
+          % gun,
+          % cowlib,
+          % ranch,
+          % eda,
+          runtime_tools,
+          observer,
+          wx,
           interlay
          ]},
         {dev_mode, true},
