--- a/config/sys.config
+++ b/config/sys.config
@@ -1,11 +1,29 @@
 [
-  {eda,
+
+%% interlay_io
+{eda,
     [{incomming_data_protocols, [
-        {tcp_in,[
-            {type, tcpipv4},
-            {forward_module, il_tcpipv4},
+        % Async / Background Example
+        {tcp_async_in,[
+            {type, tcpv4},
+            {cb_mod, il_io_tcpv4},
             {port, 9900},
-            {num_acceptors, 10},
+            {num_acceptors, 1},
+            {socket_opts, [
+                {packet, 2},
+                {delay_send, false},
+                {keepalive, true},
+                {linger, {true, 1}},
+                {show_econnreset, true},
+                {active, once}
+            ]}
+        ]},
+        % Sync / ReqResp Example
+        {tcp_sync_in,[
+            {type, tcpv4},
+            {cb_mod, il_io_tcpv4_req_resp},
+            {port, 9901},
+            {num_acceptors, 1},
             {socket_opts, [
                 {packet, 2},
                 {delay_send, false},
@@ -15,82 +33,22 @@
                 {active, once}
             ]}
         ]}
-      ]}
+      ]},
+      {outgoing_data_protocols, []}
     ]
  },
 
- {leporidae,
-    [   {reconnect_attempt_interval, 100},
-        {producers,[
-            {amqp, [
-                {name, queue_workers_rabbitmq_producer},
-                {routing_key, <<"xxx">>},
-                {basic, [
-                    {delivery_mode, 2} % non­persistent (1) or persistent (2)
-                ]},
-                % TODO: change to use global_connection
-                {connection, [
-                    {type, network},
-                    {username, <<"root">>},
-                    {passwd, <<"root">>},
-                    {vhost, <<"/">>},
-                    {host, "localhost"},
-                    {port, 5672}
-                ]},
-                {exchange,[
-                    {exchange, <<"queue_workers">>},
-                    {type, <<"direct">>},
-                    {durable, true}
-                ]},
-                {queue, [
-                    {ticket, 0},
-                    {queue, <<"queue_workers_jobs">>},
-                    {passive, false},
-                    {durable, true},
-                    {exclusive, false},
-                    {auto_delete, false},
-                    {nowait, false},
-                    {arguments, []}
-                ]}
-            ]}
-        ]},
-        {consumers, [
-            {amqp, [
-                {name, queue_workers_rabbitmq_consumer},
-                {consume_type, consume},
-                {consume_worker_mod, queue_workers_rabbitmq_worker},
-                {routing_key, <<"xxx">>},
-                {consume, [
-                    {no_ack, false},
-                    {exclusive, false},
-                    {nowait, false},
-                    {arguments, []}
-                ]},
-                {connection, [
-                    {type, network},
-                    {username, <<"root">>},
-                    {passwd, <<"root">>},
-                    {vhost, <<"/">>},
-                    {host, "localhost"},
-                    {port, 5672}
-                ]},
-                {exchange,[
-                    {exchange, <<"queue_workers">>},
-                    {type, <<"direct">>},
-                    {durable, true}
-                ]},
-                {queue, [
-                    {ticket, 0},
-                    {queue, <<"queue_workers_jobs">>},
-                    {passive, false},
-                    {durable, true},
-                    {exclusive, false},
-                    {auto_delete, false},
-                    {nowait, false},
-                    {arguments, []}
-                ]}
-            ]}
-        ]}
+ %% interlay_work
+ {queue_workers,
+     [{data_sources, [
+        %% Erlang memory database table queue
+         {ets, [% Example 1
+                [{table_name, example_ets_job_table},     % Ets table name to use
+                 {worker_module, example_ets_job_worker}, % Worker module where to work is specified
+                 {worker_count, 5}                        % number of workers allowed to read from table
+                ]
+         ]}
+      ]}
  ]},
 
  {sasl, [
