--- a/rebar.config
+++ b/rebar.config
@@ -72,9 +72,13 @@
 %% type, location and revision).
 %% Rebar3 currently supports git and hg
 {deps, [
-    {interlay_io,   {git, "https://github.com/ruanpienaar/interlay_io", {branch, "master"}}},
-    % {interlay_work, {git, "https://github.com/ruanpienaar/interlay_work", {branch, "master"}}},
-    {edc,           {git, "https://github.com/ruanpienaar/edc", {branch, "master"}}}
+    {edc, {git, "https://github.com/ruanpienaar/edc", {branch, "master"}}},
+    
+    %% interlay_io deps:
+    {eda, {git, "https://github.com/ruanpienaar/eda", {branch, "master"}}},
+
+    %% interlay_work deps:
+    {queue_workers, {git, "https://github.com/ruanpienaar/queue_workers", {branch, "master"}}}
 ]}.
 
 
@@ -108,11 +112,7 @@
 %% directories where OTP applications for the project can be located
 {project_app_dirs, ["apps/*", "lib/*", "."]}.
 %% Directories where source files for an OTP application can be found
-{src_dirs, [
-    "apps/interlay_work/src",
-    "apps/interlay_io/src",
-    "apps/interlay/src", "src"
-]}.
+{src_dirs, ["src"]}.
 %% Paths to miscellaneous Erlang files to compile for an app
 %% without including them in its modules list
 %%{extra_src_dirs, []}.
@@ -189,19 +189,28 @@
 %% == Releases ==
 
 {relx, [{release, { interlay, "0.0.1"},
-         [
-          % gproc,
-          % queue_workers,
-          % tempo,
-          % leporidae,
-          % gun,
-          % cowlib,
-          % ranch,
-          % eda,
+         [edc,
+          gproc,
+          goldrush,
+          lager,
+          jsx,
+          gun,
+          ranch,
+          ranch_proxy_protocol,
+          cowlib,
+          rabbit_common,
+          amqp_client,
+          leporidae,
+          ponos,
+          pqueue,
+          prio_queue,
+          recon,
+          eda,
+          queue_workers,
+          interlay,
           runtime_tools,
           observer,
-          wx,
-          interlay
+          wx
          ]},
         {dev_mode, true},
         {include_erts, false},
@@ -215,11 +224,7 @@
 
 %% apps to auto-boot with `rebar3 shell'; defaults to apps
 %% specified in a `relx' tuple, if any.
-{shell, [{apps, [
-        ranch,
-        eda,
-	interlay
-]}]}.
+{shell, [{apps, [ interlay ]}]}.
 
 %% == xref ==
 
