--- a/config/sys.config
+++ b/config/sys.config
@@ -44,7 +44,7 @@
         %% Erlang memory database table queue
          {ets, [% Example 1
                 [{table_name, example_ets_job_table},     % Ets table name to use
-                 {worker_module, example_ets_job_worker}, % Worker module where to work is specified
+                 {worker_module, il_worker_mod}, % Worker module where to work is specified
                  {worker_count, 5}                        % number of workers allowed to read from table
                 ]
          ]}
